# private-lessons-website

./: .gitignore  CNAME  README.md  index.html  index.js  posts.html
builder/: Cargo.toml
builder/src/: lib.rs  main.rs
pages/: 000_initial_post.html  001_v1_page.html  002_holy_saturday.html  003_summer_prep_2024.html  1.html  2.html
posts/: 000_Test_post.md  000_initial_post.md  001_new_update.md  001_v1_page.md  002_holy_saturday.md  002_mash.md  003_mix.md  003_summer_prep_2024.md
styles/: _base.scss  landing.css  landing.css.map  landing.scss  posts.css  posts.css.map  posts.scss
templates/: post.templ  post_list.templ  post_summary.templ
