[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
markdown = "1.0.0-alpha"


[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
