[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
markdown = "1.0.0-alpha"
strum = "0.26"
strum_macros = "0.26"
regex = "1"
lazy_static = "1.4"
chrono = "0.4"


[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
